# converter

./: Dockerfile  Dockerfile.nginx  app.py  docker-compose.yml  nginx.conf  requirements.txt
backend/: .env  .gitignore  Cargo.toml  binserve.json
backend/src/: app_data.rs  errors.rs  helpers.rs  main.rs  routes.rs
frontend/: Cargo.toml
frontend/assets/: index.html
frontend/public/: index.html  styles.css
frontend/public/assets/css/: styles.css
frontend/src/: main.rs
sozu-proxy/: config.toml
static/: styles.css
templates/: Dockerfile  index.html
