[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "*"
clap = { version = "*", features = ["unstable-doc", "derive"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
axum = { version = "*", features = ["multipart"] }
pingora-proxy = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# async-trait = "*"
# pingora-proxy = { version = "*", features = ["lb"] }
# reqwest = { version = "*", features = ["multipart", "blocking", "json"] }
