[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }

clap = { version = "*", features = ["cargo"] }

axum = { version = "*", features = ["multipart"] }
tower = { version = "*", features = ["util"] }
tower-http = { version = "*", features = ["fs"] }
